--- a/Reso/Reso/Base.lproj/Main.storyboard
+++ b/Reso/Reso/Base.lproj/Main.storyboard
@@ -270,7 +270,6 @@
                                                     <outlet property="pollNameLabel" destination="zSx-6G-45y" id="8D5-Wy-rHV"/>
                                                     <outlet property="timerRemainingLabel" destination="vMO-Vk-uIV" id="UAW-Fk-L2v"/>
                                                     <outlet property="votingStatusImageView" destination="CGg-0C-z1V" id="DsC-0T-8vF"/>
-                                                    <segue destination="5eg-ux-XjQ" kind="show" identifier="ToPollDetail" id="B3J-dR-hY0"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
@@ -309,6 +308,8 @@
                         <outlet property="pollSegmentController" destination="YRn-pX-5Yq" id="tWl-FA-SJU"/>
                         <outlet property="tableView" destination="6Qx-Va-vDR" id="gWk-o9-hYz"/>
                         <segue destination="ghK-wA-seZ" kind="presentation" identifier="toLogin" id="5ra-nn-NK0"/>
+                        <segue destination="fnD-mL-WMG" kind="presentation" identifier="toCreatePoll" id="Tu5-Hj-7z6"/>
+                        <segue destination="5eg-ux-XjQ" kind="show" identifier="toResultSegue" id="qNg-9r-5MI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cDl-Xa-TFk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -329,7 +330,7 @@
                 <viewControllerPlaceholder storyboardName="Detail" id="5eg-ux-XjQ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nPC-Pb-EhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1540" y="219"/>
+            <point key="canvasLocation" x="1667" y="198"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="72S-UV-GTv">
