login vc and storyboard editing

--- a/Reso/Reso/Login.storyboard
+++ b/Reso/Reso/Login.storyboard
@@ -109,8 +109,10 @@
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dcn-Zf-NDK">
                                                 <rect key="frame" x="0.0" y="0.0" width="500" height="32"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <state key="normal" title="Login"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                <state key="normal" title="Login">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="loginButtonTapped:" destination="Qly-fy-qFA" eventType="touchUpInside" id="XlP-2g-7nz"/>
                                                 </connections>
